# dingo-store

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  RocksWrapper.cpp  RocksWrapper.h  block.proto  client.cpp  run_client.sh  server.cpp
src/benchmark/: CMakeLists.txt  benchmark.cc  benchmark.h  color.h  dataset.cc  dataset.h  dataset_util.cc  dataset_util.h  main.cc  operation.cc  operation.h
src/example/: CMakeLists.txt  meta_cache_example.cc  sdk_example.cc  sdk_rawkv_example.cc  sdk_transaction_example.cc  sdk_transaction_gc_example.cc  sdk_transaction_gc_op_all_and_lock_example.cc  sdk_vector_example.cc  txn_scan_test.cc
src/example/externalproject/: CMakeLists.txt
src/pysdk/: CMakeLists.txt  __init__.py  dingosdk.swg  loader.py  pysdk_rawkv_example.py  pysdk_vector_example.py  setup.py
src/pysdk/examples/: pysdk_rawkv_example.py  pysdk_vector_example.py
src/pysdk/externalproject/: CMakeLists.txt
src/sdk/: CMakeLists.txt  admin_tool.cc  admin_tool.h  auto_increment_manager.cc  auto_increment_manager.h  client.cc  client.h  client_impl.cc  client_impl.h  client_internal_data.h  client_stub.cc  client_stub.h  common.h  coordinator_proxy.cc  coordinator_proxy.h  helper.h  meta_cache.cc  meta_cache.h  meta_member_info.cc  meta_member_info.h  param_config.h  raw_kv_impl.cc  raw_kv_impl.h  region.cc  region.h  region_creator_internal_data.h  region_scanner.h  region_scanner_impl.cc  region_scanner_impl.h  rpc_interaction.cc  rpc_interaction.h  status.cc  status.h  store_rpc.cc  store_rpc.h  store_rpc_controller.cc  store_rpc_controller.h  supervisor.cc  supervisor.h  types.h  (+2 more)
src/sdk/common/: common.h  helper.h  param_config.cc  param_config.h
src/sdk/expression/: coding.cc  coding.h  common.h  encodes.h  langchain_expr.cc  langchain_expr.h  langchain_expr_encoder.cc  langchain_expr_encoder.h  langchain_expr_factory.cc  langchain_expr_factory.h  langchain_expr_visitor.h  types.cc  types.h
src/sdk/externalproject/: CMakeLists.txt
src/sdk/port/: cluster_stat.pb.h  common.pb.h  coordinator.pb.h  coordinator_internal.pb.h  debug.pb.h  error.pb.h  file_service.pb.h  index.pb.h  meta.pb.h  node.pb.h  push.pb.h  raft.pb.h  store.pb.h  store_internal.pb.h  util.pb.h  version.pb.h
src/sdk/rawkv/: raw_kv_batch_compare_and_set_task.cc  raw_kv_batch_compare_and_set_task.h  raw_kv_batch_delete_task.cc  raw_kv_batch_delete_task.h  raw_kv_batch_get_task.cc  raw_kv_batch_get_task.h  raw_kv_batch_put_if_absent_task.cc  raw_kv_batch_put_if_absent_task.h  raw_kv_batch_put_task.cc  raw_kv_batch_put_task.h  raw_kv_compare_and_set_task.cc  raw_kv_compare_and_set_task.h  raw_kv_delete_range_task.cc  raw_kv_delete_range_task.h  raw_kv_delete_task.cc  raw_kv_delete_task.h  raw_kv_get_task.cc  raw_kv_get_task.h  raw_kv_impl.cc  raw_kv_impl.h  raw_kv_internal_data.h  raw_kv_put_if_absent_task.cc  raw_kv_put_if_absent_task.h  raw_kv_put_task.cc  raw_kv_put_task.h  raw_kv_region_scanner_impl.cc  raw_kv_region_scanner_impl.h  raw_kv_scan_task.cc  raw_kv_scan_task.h  raw_kv_task.cc  raw_kv_task.h  region_scanner_impl.cc  region_scanner_impl.h
src/sdk/rpc/: coordinator_rpc.h  coordinator_rpc_controller.cc  coordinator_rpc_controller.h  index_service_rpc.h  rpc.h  rpc_client.h  rpc_interaction.cc  rpc_interaction.h  store_rpc.h  store_rpc_controller.cc  store_rpc_controller.h
src/sdk/store/: store_rpc.cc  store_rpc.h  store_rpc_controller.cc  store_rpc_controller.h
src/sdk/transaction/: txn_buffer.cc  txn_buffer.h  txn_common.h  txn_impl.cc  txn_impl.h  (+4 more)
test/: CMakeLists.txt  main.cc  test_bdb_engine.cc  test_coprocessor.cc  test_coprocessor_aggregation_manager.cc  test_coprocessor_utils.cc  test_crontab.cc  test_failpoint.cc  test_google_sanitize.cc  test_helper.cc  test_pb.cc  test_raft_node.cc  test_raft_snapshot_handler.cc  test_region_controller.cc  test_rocks_engine.cc  test_rocks_engine_destroy.cc  test_safe_map.cc  test_scan.cc  test_scan_with_coprocessor.cc  test_segment_log_storage.cc  test_serial.cc  test_serial_selection.cc  test_service_helper.cc  test_split_checker.cc  test_store_meta_manager.cc  test_store_metrics_manager.cc  test_vector_index.cc  test_vector_index_flat.cc  test_vector_index_flat_search_limit.cc  test_vector_index_flat_search_param.cc  test_vector_index_hnsw.cc  test_vector_index_hnsw_search_param.cc  test_vector_index_ivf_flat.cc  test_vector_index_ivf_pq.cc  test_vector_index_memory.cc  test_vector_index_memory_flat.cc  test_vector_index_memory_hnsw.cc  test_vector_index_raw_ivf_pq.cc  test_vector_index_raw_ivf_pq_boundary.cc  test_vector_index_snapshot.cc  (+1 more)
test/expr/: CMakeLists.txt  assertions.cc  assertions.h  test_expr.cc
test/integration_test/: CMakeLists.txt  engine_type.cc  engine_type.h  environment.h  helper.h  main.cc  test_kvget.cc  test_kvput.cc  test_kvputifabsent.cc  test_kvscan.cc
test/sdk/: CMakeLists.txt  mock_client_stub.h  mock_coordinator_proxy.h  mock_meta_cache.h  mock_region_scanner.h  mock_rpc.h  test_base.h  test_common.h  test_meta_cache.cc  test_meta_cache.h  test_raw_kv.cc  test_region.cc  test_region_scanner.cc  test_store_rpc_controller.cc
test/unit_test/: CMakeLists.txt  main.cc  test_balance_leader.cc  test_bdb_engine.cc  test_coordinator.cc  test_coordinator_meta_storage.cc  test_coprocessor.cc  test_coprocessor_aggregation_manager.cc  test_coprocessor_utils.cc  test_coprocessor_v2.cc  test_failpoint.cc  test_google_sanitize.cc  test_helper.cc  test_latch.cc  test_log.cc  test_pb.cc  test_raft_node.cc  test_raft_snapshot_handler.cc  test_region_controller.cc  test_rel_expr_helper.cc  test_rocks_engine.cc  test_rocks_engine_destroy.cc  test_safe_map.cc  test_scan.cc  test_scan_v2.cc  test_scan_with_coprocessor.cc  test_scan_with_coprocessor_v2.cc  test_segment_log_storage.cc  test_serial.cc  test_serial_list_type.cc  test_serial_selection.cc  test_split_checker.cc  test_store_meta_manager.cc  test_store_metrics_manager.cc  test_threadpool.cc  test_tracker.cc  test_txn_gc.cc  test_txn_scan.cc  test_vector_index.cc  test_vector_index_flat.cc  (+18 more)
(+1290 files in other folders)
